tests/samples/negative/generics/local_shadow_generic_type_parameter.ax
module local_shadow_generic_type_parameter;

fn id<T>(value: T) -> T {
    let T = value;
    return T;
}

fn main() -> i32 {
    return 0;
}
